Fixing styling and readability

--- a/youtube-search-app/src/app/components/video/video.component.css
+++ b/youtube-search-app/src/app/components/video/video.component.css
@@ -41,8 +41,8 @@
     color: #fff;
     font-weight: 700;
     cursor: pointer;
-    width: 500px;
+    width: 45%;
     height: 50px;
     font-size: medium;
-    transform: translate(90.75%, 10%);
+    transform: translate(54.25%, 10%);
 }
